hphp/hack/test/typecheck/constraints/recursive_constraint_bad.php.exp
File "recursive_constraint_bad.php", line 4, characters 18-18:
Cyclic constraint between type parameters (Naming[2005])
