hphp/hack/test/typecheck/constraints/recursive_constraint_bad.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

class MySet<T as T> {}
